Ajustes menores, mudança no nome de variáveis e correção de warnings.